2019-1/231/users/4199/executions/1769_1576.log
== TEST (2019-05-23 18:57:31) 
-- CODE:
from numpy import*
eusapia = array(eval(input()))
barsanulfo = array(eval(input()))
tamanho = size(eusapia)



	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:57:53) 
-- CODE:
from numpy import*
eusapia = array(eval(input()))
barsanulfo = array(eval(input()))
tamanho = size(eusapia)



	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:58:40) 
-- CODE:
from numpy import*
eusapia = array(eval(input()))
barsanulfo = array(eval(input()))
tamanho = size(eusapia)
print(tamanho)


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:02:11) 
-- CODE:
from numpy import*
eusapia = array(eval(input()))
barsanulfo = array(eval(input()))

tamanho = size(eusapia)

contador = 0 

while( contador < tamanho ):
	print(eusapia[contador])
	contador = contador + 1


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:18:30) 
-- CODE:
from numpy import*
eusapia = array(eval(input("Eusapia: ")))
barsanulfo = array(eval(input("Barsanulfo")))

tamanho = size(eusapia)

contador = 0 
v_eusa = 0
v_bars = 0
while( contador < tamanho ):
	if(eusapia[contador] == 11 and barnasulfo[contador] == 22):
		v_bars = v_bars + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 33):
		v_eusa = v_eusa + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 11)
		


	

-- ERROR:
File "XXXX", line 15
    elif(eusapia[contador] == 11 and barsanulfo[contador] == 11)
                                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:18:50) 
-- CODE:
from numpy import*
eusapia = array(eval(input("Eusapia: ")))
barsanulfo = array(eval(input("Barsanulfo")))

tamanho = size(eusapia)

contador = 0 
v_eusa = 0
v_bars = 0
while( contador < tamanho ):
	if(eusapia[contador] == 11 and barnasulfo[contador] == 22):
		v_bars = v_bars + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 33):
		v_eusa = v_eusa + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 11):
		


	

-- ERROR:
File "XXXX", line 20
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:19:26) 
-- CODE:
from numpy import*
eusapia = array(eval(input("Eusapia: ")))
barsanulfo = array(eval(input("Barsanulfo")))

tamanho = size(eusapia)

contador = 0 
v_eusa = 0
v_bars = 0
while( contador < tamanho ):
	if(eusapia[contador] == 11 and barnasulfo[contador] == 22):
		v_bars = v_bars + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 33):
		v_eusa = v_eusa + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 11):
		contador = contador + 1
		


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:21:48) 
-- CODE:
from numpy import*
eusapia = array(eval(input("Eusapia: ")))
barsanulfo = array(eval(input("Barsanulfo")))

tamanho = size(eusapia)

contador = 0 
v_eusa = 0
v_bars = 0
while( contador < tamanho ):
	if(eusapia[contador] == 11 and barnasulfo[contador] == 22):
		v_bars = v_bars + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 33):
		v_eusa = v_eusa + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 11):
		contador = contador + 1
if(v_eusa > v_bars):
	print("EUSAPIA")
elif(v_eusa < v_bars):
	print("BARSANULFO")
else:
	print("EMPATE")


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:23:38) 
-- CODE:
from numpy import*
eusapia = array(eval(input("Eusapia: ")))
barsanulfo = array(eval(input("Barsanulfo")))

tamanho = size(eusapia)

contador = 0 
v_eusa = 0
v_bars = 0
while( contador < tamanho ):
	if(eusapia[contador] == 11 and barsasulfo[contador] == 22):
		v_bars = v_bars + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 33):
		v_eusa = v_eusa + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 11):
		contador = contador + 1
print(tamanho)		
if(v_eusa > v_bars):
	print("EUSAPIA")
elif(v_eusa < v_bars):
	print("BARSANULFO")
else:
	print("EMPATE")


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:24:32) 
-- CODE:
from numpy import*
eusapia = array(eval(input("Eusapia: ")))
barsanulfo = array(eval(input("Barsanulfo")))

tamanho = size(eusapia)

contador = 0 
v_eusa = 0
v_bars = 0
while( contador < tamanho ):
	if(eusapia[contador] == 11 and barsanulfo[contador] == 22):
		v_bars = v_bars + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 33):
		v_eusa = v_eusa + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 11):
		contador = contador + 1
print(tamanho)		
if(v_eusa > v_bars):
	print("EUSAPIA")
elif(v_eusa < v_bars):
	print("BARSANULFO")
else:
	print("EMPATE")


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:24:39) 
-- CODE:
from numpy import*
eusapia = array(eval(input("Eusapia: ")))
barsanulfo = array(eval(input("Barsanulfo: ")))

tamanho = size(eusapia)

contador = 0 
v_eusa = 0
v_bars = 0
while( contador < tamanho ):
	if(eusapia[contador] == 11 and barsanulfo[contador] == 22):
		v_bars = v_bars + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 33):
		v_eusa = v_eusa + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 11):
		contador = contador + 1
print(tamanho)		
if(v_eusa > v_bars):
	print("EUSAPIA")
elif(v_eusa < v_bars):
	print("BARSANULFO")
else:
	print("EMPATE")


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:25:31) 
-- CODE:
from numpy import*
eusapia = array(eval(input("Eusapia: ")))
barsanulfo = array(eval(input("Barsanulfo: ")))

tamanho = size(eusapia)

contador = 0 
v_eusa = 0
v_bars = 0
while( contador < tamanho ):
	if(eusapia[contador] == 11 and barsanulfo[contador] == 22):
		v_bars = v_bars + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 33):
		v_eusa = v_eusa + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 11):
		contador = contador + 1
print(tamanho)		
if(v_eusa > v_bars):
	print("EUSAPIA")
elif(v_eusa < v_bars):
	print("BARSANULFO")
else:
	print("EMPATE")


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:26:31) 
-- CODE:
from numpy import*
eusapia = array(eval(input("Eusapia: ")))
barsanulfo = array(eval(input("Barsanulfo: ")))

tamanho = size(eusapia)

contador = 0 
v_eusa = 0
v_bars = 0
while( contador < tamanho ):
	if(eusapia[contador] == 11 and barsanulfo[contador] == 22):
		v_bars = v_bars + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 33):
		v_eusa = v_eusa + 1
	elif(eusapia[contador] ==  barsanulfo[contador]):
		contador = contador + 1
print(tamanho)		
if(v_eusa > v_bars):
	print("EUSAPIA")
elif(v_eusa < v_bars):
	print("BARSANULFO")
else:
	print("EMPATE")


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:27:16) 
-- CODE:
from numpy import*
eusapia = array(eval(input("Eusapia: ")))
barsanulfo = array(eval(input("Barsanulfo: ")))

tamanho = size(eusapia)
print(tamanho)		
contador = 0 
v_eusa = 0
v_bars = 0
while( contador < tamanho ):
	if(eusapia[contador] == 11 and barsanulfo[contador] == 22):
		v_bars = v_bars + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 33):
		v_eusa = v_eusa + 1
	elif(eusapia[contador] ==  barsanulfo[contador]):
		contador = contador + 1
if(v_eusa > v_bars):
	print("EUSAPIA")
elif(v_eusa < v_bars):
	print("BARSANULFO")
else:
	print("EMPATE")


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:27:38) 
-- CODE:
from numpy import*
eusapia = array(eval(input("Eusapia:")))
barsanulfo = array(eval(input("Barsanulfo:")))

tamanho = size(eusapia)
print(tamanho)		
contador = 0 
v_eusa = 0
v_bars = 0
while( contador < tamanho ):
	if(eusapia[contador] == 11 and barsanulfo[contador] == 22):
		v_bars = v_bars + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 33):
		v_eusa = v_eusa + 1
	elif(eusapia[contador] ==  barsanulfo[contador]):
		contador = contador + 1
if(v_eusa > v_bars):
	print("EUSAPIA")
elif(v_eusa < v_bars):
	print("BARSANULFO")
else:
	print("EMPATE")


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:28:39) 
-- CODE:
from numpy import*
eusapia = array(eval(input("Eusapia:")))
barsanulfo = array(eval(input("Barsanulfo:")))

tamanho = size(eusapia)
print(tamanho)		

contador = 0 
v_eusa = 0
v_bars = 0

while( contador < tamanho ):
	if(eusapia[contador] == 11 and barsanulfo[contador] == 22):
		v_bars = v_bars + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 33):
		v_eusa = v_eusa + 1
	elif(eusapia[contador] = barsanulfo[contador]):
		contador = contador + 1
if(v_eusa > v_bars):
	print("EUSAPIA")
elif(v_eusa < v_bars):
	print("BARSANULFO")
else:
	print("EMPATE")


	

-- ERROR:
File "XXXX", line 17
    elif(eusapia[contador] = barsanulfo[contador]):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:28:49) 
-- CODE:
from numpy import*
eusapia = array(eval(input("Eusapia:")))
barsanulfo = array(eval(input("Barsanulfo:")))

tamanho = size(eusapia)
print(tamanho)		

contador = 0 
v_eusa = 0
v_bars = 0

while( contador < tamanho ):
	if(eusapia[contador] == 11 and barsanulfo[contador] == 22):
		v_bars = v_bars + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 33):
		v_eusa = v_eusa + 1
	elif(eusapia[contador] == barsanulfo[contador]):
		contador = contador + 1
if(v_eusa > v_bars):
	print("EUSAPIA")
elif(v_eusa < v_bars):
	print("BARSANULFO")
else:
	print("EMPATE")


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:29:52) 
-- CODE:
from numpy import*
eusapia = array(eval(input("Eusapia:")))
barsanulfo = array(eval(input("Barsanulfo:")))

tamanho = size(eusapia)
print(tamanho)		

contador = 0 
v_eusa = 0
v_bars = 0

while( contador < tamanho ):
	if(eusapia[contador] == 11 and barsanulfo[contador] == 22):
		v_bars = v_bars + 1
		contador = contador + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 33):
		v_eusa = v_eusa + 1
		contador = contador + 1
	elif(eusapia[contador] == barsanulfo[contador]):
		contador = contador + 1
if(v_eusa > v_bars):
	print("EUSAPIA")
elif(v_eusa < v_bars):
	print("BARSANULFO")
else:
	print("EMPATE")


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:34:51) 
-- CODE:
from numpy import*
eusapia = array(eval(input("Eusapia:")))
barsanulfo = array(eval(input("Barsanulfo:")))

tamanho = size(eusapia)
print(tamanho)		

contador = 0 
v_eusa = 0
v_bars = 0

while( contador < tamanho ):
	if(eusapia[contador] == 11 and barsanulfo[contador] == 22):
		v_bars = v_bars + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 33):
		v_eusa = v_eusa + 1
	elif(eusapia[contador] == barsanulfo[contador]):
		contador = contador + 1
	elif(eusapia[contador] == 22 and barsanulfo[contador] == 11):	
		v_eusa = v_eusa + 1
	elif(eusapia[contador] == 22 and barsanulfo[contador] == 33):
		v_bars = v_bars + 1	
	elif(eusapia[contador] == 33 and barsanulfo[contador] == 11):
		v_bars = v_bars + 1	
	elif(eusapia[contador] == 33 and barsanulfo[contador] == 22):
		v_eusa = v_eusa + 1
if(v_eusa > v_bars):
	print("EUSAPIA")
elif(v_eusa < v_bars):
	print("BARSANULFO")
else:
	print("EMPATE")


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:37:35) 
-- CODE:
from numpy import*
eusapia = array(eval(input("Eusapia:")))
barsanulfo = array(eval(input("Barsanulfo:")))

tamanho = size(eusapia)
print(tamanho)		

contador = 0 
v_eusa = 0
v_bars = 0

while( contador < tamanho ):
	if(eusapia[contador] == 11 and barsanulfo[contador] == 22):
		v_bars = v_bars + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 33):
		v_eusa = v_eusa + 1
	elif(eusapia[contador] == barsanulfo[contador]):
		contador = contador + 1
	elif(eusapia[contador] == 22 and barsanulfo[contador] == 11):	
		v_eusa = v_eusa + 1
	elif(eusapia[contador] == 22 and barsanulfo[contador] == 33):
		v_bars = v_bars + 1	
	elif(eusapia[contador] == 33 and barsanulfo[contador] == 11):
		v_bars = v_bars + 1	
	elif(eusapia[contador] == 33 and barsanulfo[contador] == 22):
		v_eusa = v_eusa + 1
	contador = contador + 1
if(v_eusa > v_bars):
	print("EUSAPIA")
elif(v_eusa < v_bars):
	print("BARSANULFO")
else:
	print("EMPATE")


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:39:54) 
-- CODE:
from numpy import*
eusapia = array(eval(input("Eusapia:")))
barsanulfo = array(eval(input("Barsanulfo:")))

tamanho = size(eusapia)
print(tamanho)		

contador = 0 
v_eusa = 0
v_bars = 0

while( contador < tamanho ):
	if(eusapia[contador] == 11 and barsanulfo[contador] == 22):
		v_bars = v_bars + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 33):
		v_eusa = v_eusa + 1
	elif(eusapia[contador] ==11 and  barsanulfo[contador] == 11):
		contador = contador + 1
	elif(eusapia[contador] == 22 and barsanulfo[contador] == 11):	
		v_eusa = v_eusa + 1
	elif(eusapia[contador] == 22 and barsanulfo[contador] == 33):
		v_bars = v_bars + 1	
	elif(eusapia[contador] == 33 and barsanulfo[contador] == 11):
		v_bars = v_bars + 1	
	elif(eusapia[contador] == 33 and barsanulfo[contador] == 22):
		v_eusa = v_eusa + 1
	contador = contador + 1
if(v_eusa > v_bars):
	print("EUSAPIA")
elif(v_eusa < v_bars):
	print("BARSANULFO")
else:
	print("EMPATE")


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 19:42:32) 
-- CODE:
from numpy import*
eusapia = array(eval(input("Eusapia:")))
barsanulfo = array(eval(input("Barsanulfo:")))

tamanho = size(eusapia)
print(tamanho)		

contador = 0 
v_eusa = 0
v_bars = 0

while( contador < tamanho ):
	if(eusapia[contador] == 11 and barsanulfo[contador] == 22):
		v_bars = v_bars + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 33):
		v_eusa = v_eusa + 1
	elif(eusapia[contador] == 22 and barsanulfo[contador] == 11):	
		v_eusa = v_eusa + 1
	elif(eusapia[contador] == 22 and barsanulfo[contador] == 33):
		v_bars = v_bars + 1	
	elif(eusapia[contador] == 33 and barsanulfo[contador] == 11):
		v_bars = v_bars + 1	
	elif(eusapia[contador] == 33 and barsanulfo[contador] == 22):
		v_eusa = v_eusa + 1
	contador = contador + 1
if(v_eusa > v_bars):
	print("EUSAPIA")
elif(v_eusa < v_bars):
	print("BARSANULFO")
else:
	print("EMPATE")


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 19:42:55) 
-- CODE:
from numpy import*
eusapia = array(eval(input("Eusapia:")))
barsanulfo = array(eval(input("Barsanulfo:")))

tamanho = size(eusapia)
print(tamanho)		

contador = 0 
v_eusa = 0
v_bars = 0

while( contador < tamanho ):
	if(eusapia[contador] == 11 and barsanulfo[contador] == 22):
		v_bars = v_bars + 1
	elif(eusapia[contador] == 11 and barsanulfo[contador] == 33):
		v_eusa = v_eusa + 1
	elif(eusapia[contador] == 22 and barsanulfo[contador] == 11):	
		v_eusa = v_eusa + 1
	elif(eusapia[contador] == 22 and barsanulfo[contador] == 33):
		v_bars = v_bars + 1	
	elif(eusapia[contador] == 33 and barsanulfo[contador] == 11):
		v_bars = v_bars + 1	
	elif(eusapia[contador] == 33 and barsanulfo[contador] == 22):
		v_eusa = v_eusa + 1
	contador = contador + 1
if(v_eusa > v_bars):
	print("EUSAPIA")
elif(v_eusa < v_bars):
	print("BARSANULFO")
else:
	print("EMPATE")


	

-- EXECUTION TIME:
0.512968
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
